--- a/Loruki/css/style.css
+++ b/Loruki/css/style.css
@@ -4,6 +4,8 @@
     --secondary-color: #1c3fa8;
     --dark-color: #002240;
     --light-color: #f4f4f4;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 
 * {
@@ -42,6 +44,11 @@ img {
     width: 100%;
 }
 
+code, pre {
+    background: #333;
+    color: #fff;
+    padding: 10px;
+}
 
 /*Navbar*/
 
@@ -198,7 +205,7 @@ img {
 }
 
 /*Features*/
-.features-head img {
+.features-head img, .docs-head img {
     width: 200px;
     justify-self: flex-end;
 }
@@ -224,6 +231,26 @@ img {
     grid-column: 1 /span 2;
 }
 
+/*Docs*/
+.docs-main h3 {
+    margin: 20px 0;
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px #ccc solid ;
+}
+
+.docs-main a:hover {
+    font-weight: bold;
+}
 
 /* Footer */
 .footer .social a {
@@ -236,7 +263,9 @@ img {
     .showcase .grid,
     .stats .grid,
     .cli .grid,
-    .cloud .grid {
+    .cloud .grid,
+    .features-main .grid,
+    .docs-main .grid {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr;
     }
@@ -258,6 +287,17 @@ img {
     .cli .grid>*:first-child {
         grid-column: 1;
         grid-row: 1;
+    }
+
+    .features-head img, 
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid >*:first-child,
+    .features-main .grid >*:nth-child(2) {
+        grid-column: 1;
     }
 }
 
