--- a/Loruki/css/utilities.css
+++ b/Loruki/css/utilities.css
@@ -32,8 +32,8 @@
     .btn:hover {
         transform: scale(.98)
     }
+
     /*Backgrounds & colored buttons */
-    
     .bg-primary,
     .btn-primary {
         background-color: var(--primary-color);
@@ -52,6 +52,12 @@
         color: white;
     }
 
+    .bg-light,
+    .btn-light {
+        background-color: var(--light-color);
+        color: #333;
+    }
+
     .bg-primary a,
     .btn-primary a,
     .bg-secondary a,
@@ -61,12 +67,23 @@
         color: white;
     }
 
-    
-    .bg-light,
-    .btn-light {
-        background-color: var(--light-color);
-        color: #333;
+    /*Text colors*/
+    .text-primary {
+        color: var(--primary-color);
     }
+    
+    .text-secondary {
+        color: var(--secondary-color);
+    }
+    
+    .text-dark {
+        color: var(--dark-color);
+    }
+
+    .text-light {
+        color: var(--light-color);
+    }
+
     /*Text sizes */
     
     .lead {
@@ -91,6 +108,28 @@
 
     .text-center {
         text-align: center;
+    }
+
+    /*Alert*/
+    .alert {
+        background-color: var(--light-color);
+        padding: 10px 20px;
+        font-weight: bold;
+        margin: 15px 0;
+    }
+
+    .alert i {
+        margin-right: 10px;
+    }
+
+    .alert-success {
+        background-color: var(--success-color);
+        color: #fff;
+    }
+
+    .alert-error {
+        background-color: var(--error-color);
+        color: #fff;
     }
     
     .flex {
